Add new personal photo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<meta property="profile:last_name" content="Pinheiro" />
 	<meta property="profile:username" content="pineman" />
 	<meta property="profile:gender" content="male" />
-	<meta property="og:image" content="https://www.pineman.win/assets/me.png" />
+	<meta property="og:image" content="https://www.pineman.win/assets/me2.jpg" />
 	<meta property="og:url" content="https://www.pineman.win" />
 	<meta property="og:description" content="Personal homepage of João Pinheiro" />
 	<meta property="og:site_name" content="pineman.win" />
@@ -27,7 +27,7 @@
 <body>
 <div id="wrap">
 	<header>
-	<img src="assets/me.png" />
+	<img src="assets/me2.jpg" />
 	<div id ="header-text">
 	<h1>Hi! I'm João.</h1>
 	<span>Software • Systems • Curiosity</span>
