Change software descr

--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
 	</header>
 	<article>
 	<h1>About me</h1>
-	<p>My name is João Pinheiro (aka pineman) and I'm from Lisbon, Portugal. I'm a 4th year Electrical and Computer Engineering student at <a href="https://tecnico.ulisboa.pt/" target="_blank">Técnico Lisboa</a>. I'm passionate about distributed, fault tolerant, concurrent systems and software infrastructure overall.</p>
+	<p>My name is João Pinheiro (aka pineman) and I'm from Lisbon, Portugal. I'm a 4th year Electrical and Computer Engineering student at <a href="https://tecnico.ulisboa.pt/" target="_blank">Técnico Lisboa</a>. I'm passionate about software, especially infrastructure, and I love reading the manual.</p>
 
 	<p>Currently I'm experienced in <b>C</b>, <b>Python</b>, <b>JavaScript</b> (& <b>Node.js</b>), and <b>C++/Qt</b>. I'm most comfortable on <b>GNU/Linux</b> but I love Operating Systems generally, as I'm always very keen on learning new technologies and solutions. When I can, I dabble with Functional Programming and I'm very interested in Rust and Erlang/Elixir.</p>
 
-	<p>This server is running <a href="https://www.archlinux.org/" target="_blank">Arch Linux</a> (<span id="uptime"></span>) and I manage it since 2014 as a learning platform. It runs various services like <b>HTTP</b> (nginx), <b>Git</b>, <b>SMB</b>, <b>SMTP</b> (postfix), <b>IMAP</b> (dovecot), ZNC and Radicale (all config files available <a href="https://github.com/pineman/pinecone" target="_blank">here</a>). It also hosts some friend's webpages, and some projects, like <a href="https://abra.pineman.win" target="_blank">abra</a>, a keyboard typing speed browser game.</p>
+	<p>This server is running <a href="https://www.archlinux.org/" target="_blank">Arch Linux</a> (<span id="uptime"></span>) and I manage it since 2014 as a learning platform. It runs various services like <b>HTTP</b> (nginx), <b>Git</b>, <b>SMB</b>, <b>SMTP</b> (postfix), <b>IMAP</b> (dovecot) and ZNC (all config files available <a href="https://github.com/pineman/pinecone" target="_blank">here</a>). It also hosts some friend's webpages, and some projects, like <a href="https://abra.pineman.win" target="_blank">abra</a>, a keyboard typing speed browser game.</p>
 	</article>
 </div>
 <script>
