--- a/cv/index.html
+++ b/cv/index.html
@@ -50,7 +50,7 @@
 <div id="content">
 	<h1>João Pinheiro</h1>
 	<div id="descr">Software • Systems • Curiosity</div>
-	<a target="_blank" href="https://www.linkedin.com/in/joaocastropinheiro"><i class="fab fa-linkedin" style="font-size:18px;"></i>www.linkedin.com/in/joaocastropinheiro</a>
+	<i class="fab fa-linkedin" style="font-size:18px;"></i><a target="_blank" href="https://www.linkedin.com/in/joaocastropinheiro">www.linkedin.com/in/joaocastropinheiro</a>
 
 	<h2>Education</h2>
 	<div class="parent-item">
