--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
 	<h1>About me</h1>
 	<p>My name is João Pinheiro (aka pineman) and I'm from Lisbon, Portugal. I'm a 4th year Electrical and Computer Engineering student at <a href="https://tecnico.ulisboa.pt/" target="_blank">Técnico Lisboa</a>. I'm passionate about software, especially free and open source. I like the whole stack and I love reading the manual.</p>
 
-	<p>Currently I'm experienced in <b>C</b>, <b>Python</b>, <b>JavaScript</b> (& <b>Node.js</b>), and <b>C++/Qt</b>. I'm most comfortable on <b>GNU/Linux</b> but I love Operating Systems generally, as I'm always very keen on learning new technologies and solutions. When I can, I dabble with Functional Programming and I'm very interested in Rust, Go and Erlang/Elixir.</p>
+	<p>Currently I'm most experienced with <b>C</b>, <b>Python</b>, <b>JavaScript</b> (& <b>Node.js</b>), and <b>C++/Qt</b>. I'm most comfortable on <b>GNU/Linux</b> but I love Operating Systems generally, as I'm always very keen on learning new technologies and solutions. When I can, I dabble with Functional Programming and I'm very interested in <a href="https://www.youtube.com/watch?v=BXmOlCy0oBM" target="_blank">Erlang</a>/<a href="https://www.youtube.com/watch?v=JvBT4XBdoUE" target="_blank">Elixir</a>, Rust and Go.</p>
 
-	<p>This server is running <a href="https://www.archlinux.org/" target="_blank">Arch Linux</a> (<span id="uptime"></span>) and I manage it since 2014 as a learning platform. It runs various services like <b>HTTP</b> (nginx), <b>Git</b>, <b>SMB</b>, <b>SMTP</b> (postfix), <b>IMAP</b> (dovecot) and ZNC (all config files available <a href="https://github.com/pineman/pinecone" target="_blank">here</a>). It also hosts some friend's webpages, and some projects, like <a href="https://abra.pineman.win" target="_blank">abra</a>, a keyboard typing speed browser game.</p>
+	<p>This server is running <a href="https://www.archlinux.org/" target="_blank">Arch Linux</a> (<span id="uptime"></span>) and I manage it since 2014 as a learning platform. It runs various services like <b>HTTP</b> (nginx), <b><a href="https://git.pineman.win" target="_blank">Git</a></b> (gitea), <b>SMTP</b> (postfix), <b>IMAP</b> (dovecot), <b>SMB</b>, and ZNC (all config files available <a href="https://github.com/pineman/pinecone" target="_blank">here</a>). It also hosts some friend's webpages, and some projects, like <a href="https://abra.pineman.win" target="_blank">abra</a>, a keyboard typing speed browser game.</p>
 	</article>
 </div>
 </div>
@@ -129,7 +129,7 @@
 		fetch('uptime')
 		.then(r => r.text())
 		.then(r => uptimeSpan.textContent = r.trim());
-		setTimeout(uptime, 30*1000);
+		setTimeout(uptime, 10*1000);
 	})();
 </script>
 </body>
