--- a/cv/index.html
+++ b/cv/index.html
@@ -41,6 +41,9 @@
 	<hr />
 	<h3>Interests</h3>
 	DevOps, Concurrency, Fault Tolerance, Operating Systems, Distributed Systems, Rust, Erlang/Elixir
+	<!--<hr />
+	<h3>Hobbies</h3>
+	Reading (technical and some fiction), Running, Electronics-->
 	</div>
 	<!--<div id="ver">
 		<a href="https://www.pineman.win/cv" target="_blank">HTML version</a> | <a href="https://www.pineman.win/cv/cv.pdf" target="_blank">PDF version</a>
