--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 	</header>
 	<article>
 	<h1>About me</h1>
-	<p>My name is João Pinheiro (aka pineman) and I'm from Lisbon, Portugal. I'm a 4th year Electrical and Computer Engineering student at <a href="https://tecnico.ulisboa.pt/" target="_blank">Técnico Lisboa</a>. I'm passionate about software, especially free and open source. I like the whole stack and I love reading the manual. Check out what I'm currently reading <a href="https://www.goodreads.com/review/list/30442257-jo-o-pinheiro?shelf=now-computer" target="_blank">here</a>.</p></p>
+	<p>My name is João Pinheiro (aka pineman) and I'm from Lisbon, Portugal. I'm a 4th year Electrical and Computer Engineering student at <a href="https://tecnico.ulisboa.pt/" target="_blank">Técnico Lisboa</a>. I'm passionate about software, especially free and open source. I like large, complex, distributed systems and I love reading the manual. Check out what I'm currently reading <a href="https://www.goodreads.com/review/list/30442257-jo-o-pinheiro?order=d&shelf=now-computer" target="_blank">here</a>.</p></p>
 
 	<p>Currently I'm most experienced with <b>C</b>, <b>Python</b>, <b>JavaScript</b> (& <b>Node.js</b>), and <b>C++/Qt</b>. I love learning new languages and stacks: when I can, I dabble with Functional Programming and I'm very interested in <a href="https://www.youtube.com/watch?v=BXmOlCy0oBM" target="_blank">Erlang</a>/<a href="https://www.youtube.com/watch?v=JvBT4XBdoUE" target="_blank">Elixir</a>, Rust and Go.
 
