--- a/cv/index_pt.html
+++ b/cv/index_pt.html
@@ -33,7 +33,7 @@
 		<li><i class="fa fa-envelope"></i><a target="_blank" href="mailto:joaocastropinheiro@gmail.com">joaocastropinheiro@gmail.com</a></li>
 		<li><i class="fas fa-phone"></i>+351 968 818 031</li>
 		<li><i class="fab fa-github"></i><a target="_blank" href="https://github.com/pineman">github.com/pineman</a></li>
-		<li><i class="fas fa-globe"></i><a target="_blank" href="https://www.pineman.win">www.pineman.win</a></li>
+		<li><i class="fas fa-globe"></i><a target="_blank" href="https://www.pineman.eu">www.pineman.win</a></li>
 	</ul>
 	<hr />
 	<h3>Tecnologias</h3>
@@ -43,7 +43,7 @@
 	DevOps, Concurrency, Fault Tolerance, Sistemas Operativos, Sistemas Distribuídos, Rust, Erlang/Elixir
 	</div>
 	<!--<div id="ver">
-		<a href="https://www.pineman.win/cv" target="_blank">Versão HTML</a> | <a href="https://www.pineman.win/cv/cv.pdf" target="_blank">Versão PDF</a>
+		<a href="https://www.pineman.eu/cv" target="_blank">Versão HTML</a> | <a href="https://www.pineman.win/cv/cv.pdf" target="_blank">Versão PDF</a>
 	</div>-->
 </div>
 
@@ -108,7 +108,7 @@
 	<h2 style="margin-top:-0.4rem;">Projetos</h2>
 	<div id="proj">
 	<div class="proj-item" style="border-right: 1px solid #f1f1f1">
-		<a href="https://abra.pineman.win" target="_blank">Abra</a>
+		<a href="https://abra.pineman.eu" target="_blank">Abra</a>
 		Um jogo de velocidade de escrita, desenvolvido com dois colegas. Os jogadores competem e vêem, em tempo real, os cursores dos outros. Tecnologias: Node.js, WebSockets, Less, Nginx.
 	</div>
 	<div class="proj-item" style="padding-left:10px;">
