--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 	<meta property="profile:last_name" content="Pinheiro" />
 	<meta property="profile:username" content="pineman" />
 	<meta property="profile:gender" content="male" />
-	<meta property="og:image" content="https://www.pineman.win/assets/me2.jpg" />
-	<meta property="og:url" content="https://www.pineman.win" />
+	<meta property="og:image" content="https://www.pineman.eu/assets/me2.jpg" />
+	<meta property="og:url" content="https://www.pineman.eu" />
 	<meta property="og:description" content="Personal homepage of João Pinheiro" />
-	<meta property="og:site_name" content="pineman.win" />
+	<meta property="og:site_name" content="pineman.eu" />
 	<meta property="og:locale" content="en_US" />
 	<title>João Pinheiro</title>
 
@@ -113,7 +113,7 @@
 
 	<p>Currently I'm most experienced with <b>C</b>, <b>Python</b>, <b>JavaScript</b> (& <b>Node.js</b>), and <b>C++/Qt</b>. I love learning new languages and stacks: when I can, I dabble with Functional Programming and I'm very interested in <a href="https://www.youtube.com/watch?v=BXmOlCy0oBM" target="_blank">Erlang</a>/<a href="https://www.youtube.com/watch?v=JvBT4XBdoUE" target="_blank">Elixir</a>, Rust and Go.
 
-	<p>This server is running <a href="https://www.archlinux.org/" target="_blank">Arch Linux</a> (<span id="uptime"></span>) and I manage it since 2014 as a learning platform. It runs various services like <b>HTTP</b> (nginx), <b><a href="https://git.pineman.win" target="_blank">Git</a></b> (gitea), <b>SMTP</b> (postfix), <b>IMAP</b> (dovecot), <b>SMB</b>, and ZNC (all config files available <a href="https://github.com/pineman/pinecone" target="_blank">here</a>). It also hosts some projects, like <a href="https://abra.pineman.win" target="_blank">abra</a>, a keyboard typing speed browser game, and some friends' webpages: <a href="https://almiro.pineman.win" target="_blank">almiro</a>, <a href="https://morais.pineman.win" target="_blank">morais</a>, <a href="https://mathspp.com" target="_blank">rodrigo</a> and <a href="https://tito.pineman.win" target="_blank">tito</a>.</p>
+	<p>This server is running <a href="https://www.archlinux.org/" target="_blank">Arch Linux</a> (<span id="uptime"></span>) and I manage it since 2014 as a learning platform. It runs various services like <b>HTTP</b> (nginx), <b><a href="https://git.pineman.eu" target="_blank">Git</a></b> (gitea), <b>SMTP</b> (postfix), <b>IMAP</b> (dovecot), <b>SMB</b>, and ZNC (all config files available <a href="https://github.com/pineman/pinecone" target="_blank">here</a>). It also hosts some projects, like <a href="https://abra.pineman.eu" target="_blank">abra</a>, a keyboard typing speed browser game, and some friends' webpages: <a href="https://almiro.pineman.eu" target="_blank">almiro</a>, <a href="https://morais.pineman.eu" target="_blank">morais</a>, <a href="https://mathspp.com" target="_blank">rodrigo</a> and <a href="https://tito.pineman.eu" target="_blank">tito</a>.</p>
 	</article>
 </div>
 </div>
