--- a/cv/index.html
+++ b/cv/index.html
@@ -33,7 +33,7 @@
 		<li><i class="fa fa-envelope"></i><a target="_blank" href="mailto:joaocastropinheiro@gmail.com">joaocastropinheiro@gmail.com</a></li>
 		<li><i class="fas fa-phone"></i>+351 968 818 031</li>
 		<li><i class="fab fa-github"></i><a target="_blank" href="https://github.com/pineman">github.com/pineman</a></li>
-		<li><i class="fas fa-globe"></i><a target="_blank" href="https://www.pineman.win">www.pineman.win</a></li>
+		<li><i class="fas fa-globe"></i><a target="_blank" href="https://www.pineman.eu">www.pineman.eu</a></li>
 	</ul>
 	<hr />
 	<h3>Technologies</h3>
@@ -46,7 +46,7 @@
 	Reading (technical and some fiction), Running, Electronics-->
 	</div>
 	<!--<div id="ver">
-		<a href="https://www.pineman.win/cv" target="_blank">HTML version</a> | <a href="https://www.pineman.win/cv/cv.pdf" target="_blank">PDF version</a>
+		<a href="https://www.pineman.eu/cv" target="_blank">HTML version</a> | <a href="https://www.pineman.eu/cv/cv.pdf" target="_blank">PDF version</a>
 	</div>-->
 </div>
 
@@ -111,7 +111,7 @@
 	<h2 style="margin-top:-0.4rem;">Projects</h2>
 	<div id="proj">
 	<div class="proj-item" style="border-right: 1px solid #f1f1f1">
-		<a href="https://abra.pineman.win" target="_blank">Abra</a>
+		<a href="https://abra.pineman.eu" target="_blank">Abra</a>
 		A keyboard typing speed game, developed with two colleagues. The players compete and see, in real time, each other's text cursors. Technologies: Node.js, WebSockets, Less, Nginx.
 	</div>
 	<div class="proj-item" style="padding-left:10px;">
