make audio autoplay and loop

--- a/stream.html
+++ b/stream.html
@@ -36,7 +36,7 @@
 <div id="wrap">
 	<h1>Now playing:</h1>
 	<h1 id="title"></h1>
-	<audio controls>
+	<audio controls autoplay loop>
 		<source src="http://pineman.eu:8080" type="audio/ogg">
 	</audio>
 	<h3>Filename: <span id="filename"></span></h3>
