--- a/stream.html
+++ b/stream.html
@@ -41,7 +41,7 @@
 	</audio>
 	<h3>Filename: <span id="filename"></span></h3>
 	<h4><a href="cmd/playlist.php" target="_blank">current mpd playlist</a></h4>
-	<h4><a href="/music" target="_blank">file index</a></h4>
+	<!--<h4><a href="/music" target="_blank">file index</a></h4>-->
 </div>
 <script>
 	// Yes this should use websockets.
