--- a/src/index.html
+++ b/src/index.html
@@ -103,7 +103,7 @@
 	<li><i class="fas fa-file-alt" style="padding-left:1px;"></i>CV: <a href="cv/cv.pdf" target="_blank">PDF</a> or <a href="cv" target="_blank">HTML</a></li>
 	<li><i class="fab fa-keybase"></i><a href="https://keybase.io/pineman" target="_blank">Keybase</a></li>
 	<li><i class="fas fa-key"></i><a href="pubkey.asc" target="_blank">PGP key</a></li>
-	<!--<li><i class="fas fa-comments" style="font-size:0.9rem;padding:0 5px 0 -2px;"></i><code>pineman</code> on FreeNode and MozNet-->
+	<li><i class="fas fa-comments" style="font-size:0.9rem;padding:0 5px 0 -2px;"></i><code>pineman</code> on FreeNode and MozNet</li>
 	</ul>
 	</div>
 </header>
@@ -118,6 +118,7 @@
 	<br />
 	<a href="https://www.eff.org/" style="border-bottom: none;"><img src="https://www.eff.org/files/eff-join2_0.png" alt="Join EFF!" border="0"></a>
 	<a href="https://www.fsf.org/" style="border-bottom: none;"><img src="https://static.fsf.org/nosvn/associate/crm/3217362.png" alt="Join the FSF!"></a>
+	<div id="test"></div>
 </article>
 </div>
 </div>
