--- a/src/index.html
+++ b/src/index.html
@@ -103,7 +103,7 @@
 	<li><i class="fas fa-file-alt" style="padding-left:1px;"></i>CV: <a href="cv/cv.pdf" target="_blank">PDF</a> or <a href="cv" target="_blank">HTML</a></li>
 	<li><i class="fab fa-keybase"></i><a href="https://keybase.io/pineman" target="_blank">Keybase</a></li>
 	<li><i class="fas fa-key"></i><a href="pubkey.asc" target="_blank">PGP key</a></li>
-	<li><i class="fas fa-comments" style="font-size:0.9rem;padding:0 5px 0 -2px;"></i><code>pineman</code> on FreeNode and MozNet</li>
+	<!--<li><i class="fas fa-comments" style="font-size:0.9rem;padding:0 5px 0 -2px;"></i><code>pineman</code> on FreeNode and MozNet</li>-->
 	</ul>
 	</div>
 </header>
@@ -113,7 +113,7 @@
 
 	<p>Currently I'm most experienced with <b>C</b>, <b>Python</b>, <b>Java</b>, <b>JavaScript</b> (& <b>Node.js</b>) and <b>C++/Qt</b>. I love learning new languages and stacks: when I can, I dabble with Functional Programming and I'm very interested in <a href="https://www.youtube.com/watch?v=BXmOlCy0oBM" target="_blank">Erlang</a>/<a href="https://www.youtube.com/watch?v=JvBT4XBdoUE" target="_blank">Elixir</a>, Rust and Go.
 
-	<p>This server is running on a container on <a href="https://www.archlinux.org/" target="_blank">Arch Linux</a> (<span id="uptime"></span>) on a VM on a Thinkpad X220 in my parents house. It runs various services - all config files available <a href="https://github.com/pineman/services" target="_blank">here</a>. It also hosts some projects, like <a href="https://abra.pineman.eu" target="_blank">abra</a>, a keyboard typing speed browser game.</p>
+	<p>This server is running on a container on <a href="https://www.archlinux.org/" target="_blank">Arch Linux</a> (<span id="uptime"></span>) on a VM on my college Thinkpad X220 on ZFS on a consumer network connection in my parents house (phew!). It runs various services - all config files available <a href="https://github.com/pineman/services" target="_blank">here</a>. It also hosts some projects, like <a href="https://abra.pineman.eu" target="_blank">abra</a>, a keyboard typing speed browser game.</p>
 
 	<br />
 	<a href="https://www.eff.org/" style="border-bottom: none;"><img src="https://www.eff.org/files/eff-join2_0.png" alt="Join EFF!" border="0"></a>
