--- a/src/cv/index.html
+++ b/src/cv/index.html
@@ -3,122 +3,124 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-	<title>João Pinheiro CV</title>
+  <meta name="theme-color" content="#171B36">
 	<link rel="icon" type="image/x-icon" href="favicon.ico" />
-	<meta name="author" content="" />
-	<meta name="description" content="" />
-	<meta name="keywords" content="" />
-	<meta property="og:title" content="" />
-	<meta property="og:type" content="" />
-	<meta property="og:locale" content="" />
-	<meta property="og:image" content="" />
-	<meta property="og:url" content="" />
-	<meta property="og:description" content="" />
-	<meta property="og:site_name" content="" />
-
 	<link rel="stylesheet" href="style.css" />
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+	<link rel="stylesheet" href="assets/fontawesome/css/all.css" />
+	<title>João Pinheiro CV</title>
 </head>
 
 <body>
-<div id="side">
-	<div id="side-wrap">
-	<div id="img"><img class="photo" src="assets/me2.jpg" /></div>
-	<div class="center">João Francisco de Castro Pinheiro</div>
-	<hr />
-	<ul>
-		<li><i class="fas fa-birthday-cake"></i>22</li>
-		<li><i class="fas fa-map-marker-alt"></i>Lisboa, Portugal</li>
-		<li><i class="fa fa-envelope"></i><a target="_blank" href="mailto:joaocastropinheiro@gmail.com">joaocastropinheiro@gmail.com</a></li>
-		<li><i class="fas fa-phone"></i>+351 968 818 031</li>
-		<li><i class="fab fa-github"></i><a target="_blank" href="https://github.com/pineman">github.com/pineman</a></li>
-		<li><i class="fas fa-globe"></i><a target="_blank" href="https://www.pineman.eu">www.pineman.eu</a></li>
-	</ul>
-	<hr />
-	<h3>Technologies</h3>
-	Linux, C, C++, Python, JavaScript, Node.js, Git, HTML, CSS, Nginx, SQL, Bash, Assembly, Latex, Matlab, Mathematica
-	<hr />
-	<h3>Interests</h3>
-	DevOps, Concurrency, Fault Tolerance, Operating Systems, Distributed Systems, Rust, Erlang/Elixir
-	<!--<hr />
-	<h3>Hobbies</h3>
-	Reading (technical and some fiction), Running, Electronics-->
-	</div>
-	<!--<div id="ver">
-		<a href="https://www.pineman.eu/cv" target="_blank">HTML version</a> | <a href="https://www.pineman.eu/cv/cv.pdf" target="_blank">PDF version</a>
-	</div>-->
-</div>
+<aside>
+	<side-wrap>
+		<div id="photo"><img id="photo" src="assets/me.jpg" /></div>
+		<h2 id="name">João Pinheiro</h2>
+		<div id="description">Software • Systems • Curiosity</div>
+		<hr />
+		<ul id="details">
+			<li><i class="fas fa-birthday-cake"></i>25</li>
+			<li><i class="fas fa-map-marker-alt"></i>Porto, Portugal</li>
+			<li><i class="fa fa-envelope"></i><a target="_blank" href="mailto:joaocastropinheiro@gmail.com">joaocastropinheiro@gmail.com</a></li>
+			<li><i class="fas fa-phone"></i><a target="_blank" href="tel:+351968818031">+351 968 818 031</a></li>
+      <li><i class="fab fa-linkedin"></i><a target="_blank" href="https://www.linkedin.com/in/joaocastropinheiro">LinkedIn</a></li>
+			<li><i class="fab fa-github"></i><a target="_blank" href="https://github.com/pineman">GitHub</a></li>
+			<li><i class="fa-brands fa-goodreads"></i><a target="_blank" href="https://www.goodreads.com/review/list/30442257-jo-o-pinheiro?order=d&shelf=now-computer">Goodreads</a></li>
+			<li><i class="fas fa-globe"></i><a target="_blank" href="https://www.pineman.eu">www.pineman.eu</a></li>
+		</ul>
+		<hr />
+		<h3>Technologies</h3>
+			Python, Java, C, C++, JavaScript, Bash, Git, PostgreSQL, Linux, Docker, K8s, GCloud, gitlab-runner
+		<hr />
+		<h3>Interests</h3>
+			Go, Rust, Erlang/Elixir, Distributed Systems, Concurrency, High Availability, DevOps, OSes
+		<hr />
+    <h3>Projects</h3>
+      <a target="_blank" href="https://abra.pineman.eu">abra</a>, <a target="_blank" href="https://github.com/pineman/services">services</a>, <a target="_blank" href="https://github.com/pineman/code">playground</a>, <a target="_blank" href="https://gitlab.com/pineman/hello">ruby</a>, <a target="_blank" href="https://gitlab.com/pineman/homepage">this website</a>
+	</side-wrap>
+	<version>
+		<a target="_blank" href="https://www.pineman.eu/cv">HTML version</a> | <a target="_blank" href="https://www.pineman.eu/cv/cv.pdf">PDF version</a> | rev: 5c6a7c4
+	</version>
+</aside>
 
-<div id="content">
-	<h1>João Pinheiro</h1>
-	<div id="descr">Software • Systems • Curiosity</div>
-	<i class="fab fa-linkedin" style="font-size:18px;"></i><a target="_blank" href="https://www.linkedin.com/in/joaocastropinheiro">www.linkedin.com/in/joaocastropinheiro</a>
-
+<article>
+  <education>
 	<h2>Education</h2>
-	<div class="parent-item">
-	<div class="item">
-		<div class="item-img"><img src="assets/ist.jpg"></div>
-		<div class="item-sum">
-			<h4><i class="fas fa-briefcase"></i>Student</h4>
-			<h4><i class="fas fa-map-marker-alt fix"></i>Instituto Superior Técnico</h4>
-			<h4><i class="fas fa-clock"></i>Sep. 2015 - Present</h4>
-		</div>
-		<div class="item-descr">
-			<p>4th year Electrical and Computer Engineering.</p>
-			<p>Favourite courses: Algorithms and Data Structures, Systems Progamming, Linear Algebra, Electronics I, Computer Architectures.</p>
-		</div>
-	</div>
-	</div>
+	<gig>
+		<gig-header>
+		  <gig-img><img src="assets/ist.jpg"></gig-img>
+		  <gig-info>
+			  <h4><i class="fas fa-briefcase"></i>Student</h4>
+			  <h4><i class="fas fa-map-marker-alt fix"></i>Instituto Superior Técnico (IST)</h4>
+			  <h4><i class="fas fa-clock"></i>Sep. '15 to Jun. '19</h4>
+		  </gig-info>
+		</gig-header>
+		<gig-description>
+			<p>BA, 4th-year Electrical and Computer Engineering.</p>
+		</gig-description>
+	</gig>
+  </education>
 	<hr />
-
-	<h2 style="margin-top:-0.4rem;">Experience</h2>
-	<div class="parent-item">
-	<div class="item">
-		<div class="item-img"><img src="assets/fst.png"></div>
-		<div class="item-sum">
-			<h4><i class="fas fa-briefcase"></i>Fulltime Intern</h4>
-			<h4><i class="fas fa-map-marker-alt fix"></i><a href="http://fst.tecnico.ulisboa.pt/" target="_blank">Formula Student Técnico</a></h4>
-			<h4><i class="fas fa-clock"></i>Sep. 2017 - Jan. 2018</h4>
-		</div>
-		<div class="item-descr">
-			<p>Revamped the team's build tools for PIC microcontrollers, reducing the compilation and programming steps to just one keypress, boosting productivity in the development cycle.</p>
-			<p>Began a refactoring of the USB-CAN Interface (written in C++/Qt) and allowed its compilation to Windows.</p>
-			<p>Experienced and was integrated in the team dynamics of a multidisciplinary engineering project, as a fulltime position.</p>
-		</div>
-	</div>
-	</div>
+  <experience>
+	<h2 id="experience">Experience</h2>
+	<gig>
+		<gig-header>
+			<gig-img><img src="assets/cf.png"></gig-img>
+			<gig-info>
+				<h4><i class="fas fa-briefcase"></i>Software Engineer</h4>
+				<h4><i class="fas fa-map-marker-alt fix"></i><a target="_blank" href="https://www.celfocus.com/home/index.php/offer/products/celfocus-one-net-mobile-office">Celfocus - Unified Communications - One Net</a></h4>
+				<h4><i class="fas fa-clock"></i>Aug. '19 to present</h4>
+			</gig-info>
+		</gig-header>
+		<gig-description>
+			<p>One Net is Celfocus' enterprise voice solution, with 5 international deployments. It unifies mobile phones, landlines, and softphones while providing many value-added features. The Call Handling Server (CHS) sits in the cell network, speaks both SS7 and SIP (185k C++ SLOC), has an in-memory DB and strict SLAs. Its provisioned via a web Portal, written in React and Java EE+PSQL, integrating with many external systems while providing its own JSON REST API.</p>
+			<p>I started with a CHS hat then very gradually shifted to Portal backend, as I switched to a cross-functional team. I was fortunate enough to catch and learn from the project's founding Seniors, as my first professional endeavour, and acquired a sort-of generalist Systems role; currently, while I still do feature work, I mostly tend to infrastructure (CI), tooling, glue, dev productivity and work on the more off-the-beaten-path threads product-wide and architecturally. I spearheaded refactorings, infra migrations (Gitlab, GCloud) and a new project (docs with CI/CD).</p>
+		</gig-description>
+	</gig>
 	<hr />
-
-	<div class="parent-item">
-	<div class="item">
-		<div class="item-img"><img src="assets/hs.png"></div>
-		<div class="item-sum">
-			<h4><i class="fas fa-briefcase"></i>Collaborator</h4>
-			<h4><i class="fas fa-map-marker-alt fix"></i><a href="https://hackerschool.io/" target="_blank">HackerSchool</a></h4>
-			<h4><i class="fas fa-clock"></i>May 2016 - Sep. 2017</h4>
-		</div>
-		<div class="item-descr">
-			<p>Participated in a Passion Project, organized by <a href="https://www.identity.pt/" target="_blank">Identity</a>, entitled <a href="https://github.com/hackerschool/r2p" target="_blank">r2p</a>. Our team developed a pair of GUI apps (client-server), in C++/Qt, to stream games from a Windows PC to a Raspberry Pi, using  <a href="http://www.freerdp.com/" target="_blank">FreeRDP</a>.</p>
-			<p>Codeveloped an <a href="https://github.com/hackerschool/ledmatrix" target="_blank">LED Matrix</a>. Programmed an Orange Pi as controller, using Python, with a web interface, and an Arduino as driver.</p>
-			<p>Supported various company events in Técnico, such as workshops and hackathons (e.g. SecThon 2016), working with <a href="https://tt.tecnico.ulisboa.pt/parcerias-empresariais/" target="_blank">TT@Técnico</a>.</p>
-			<p>Helped give a workshop on electronics and soldering during <a href="https://www.ulisboa.pt/info/verao-na-ulisboa-2016" target="_blank">Verão na ULisboa 2016</a> to students from the 7th to 12th grade.</p>
-		</div>
-	</div>
-	</div>
+	<gig>
+		<gig-header>
+			<gig-img><img src="assets/cms.png"></gig-img>
+			<gig-info>
+				<h4><i class="fas fa-briefcase"></i>Summer internship</h4>
+				<h4><i class="fas fa-map-marker-alt fix"></i><a target="_blank" href="https://github.com/amagovpt/autenticacao.gov">Caixa Mágica - Portuguese Citizen Card</a></h4>
+				<h4><i class="fas fa-clock"></i>Jun. '19 to Aug. '19</h4>
+			</gig-info>
+		</gig-header>
+		<gig-description>
+			<p><a target="_blank" href="https://github.com/amagovpt/autenticacao.gov/commits/master?author=joao.pinheiro@caixamagica.pt">Open Source development</a> in C, C++, Qt Quick/QML.</p>
+		</gig-description>
+	</gig>
 	<hr />
-
-	<h2 style="margin-top:-0.4rem;">Projects</h2>
-	<div id="proj">
-	<div class="proj-item" style="border-right: 1px solid #f1f1f1">
-		<a href="https://abra.pineman.eu" target="_blank">Abra</a>
-		A keyboard typing speed game, developed with two colleagues. The players compete and see, in real time, each other's text cursors. Technologies: Node.js, WebSockets, Less, Nginx.
-	</div>
-	<div class="proj-item" style="padding-left:10px;">
-		<a href="https://github.com/pineman/pinecone" target="_blank">Pinecone</a>
-		Personal Linux server, administered since 2014 as a learning platform. It runs various services, such as HTTP, SMTP, SMB, git, and hosts some friends' sites and respositories.
-	</div>
-	</div>
-</div>
+	<side-by-side-wrap>
+	<gig>
+		<gig-header>
+			<gig-img><img src="assets/fst.png"></gig-img>
+			<gig-info>
+				<h4><i class="fas fa-briefcase"></i>Fulltime</h4>
+				<h4><i class="fas fa-map-marker-alt fix"></i><a target="_blank" href="http://fst.tecnico.ulisboa.pt/">FST Lisboa</a></h4>
+				<h4><i class="fas fa-clock"></i>Sep. '17 to Jan. '18</h4>
+			</gig-info>
+		</gig-header>
+		<gig-description>
+			<p>Formula Student is an annual international student engineering competition. Teams build, test and race a formula style car. For a semester I programmed PIC μCs for automotive and a USB to CAN Interface (C++/Qt); Ported the latter to Windows; Reduced dev loop to one keypress.</p>
+		<gig-description>
+	</gig>
+	<hr />
+	<gig>
+		<gig-header>
+			<gig-img><img src="assets/hs.png"></gig-img>
+			<gig-info>
+				<h4><i class="fas fa-briefcase"></i>Member</h4>
+				<h4><i class="fas fa-map-marker-alt fix"></i><a target="_blank" href="https://hackerschool.io/">HackerSchool</a></h4>
+				<h4><i class="fas fa-clock"></i>May '16 to Sep. '17</h4>
+			</gig-info>
+		</gig-header>
+		<gig-description>
+			<p>HackerSchool is a student society that promoted the Hacker spirit. I codeveloped a <a target="_blank" href="https://github.com/hackerschool/r2p">pair of GUI apps in C++/Qt</a> as a challenge by <a target="_blank" href="https://www.identity.pt/">Identity</a>; Codeveloped an <a target="_blank" href="https://github.com/hackerschool/ledmatrix">LED Matrix</a> in Python and Arduino; Supported events at IST, such as <a target="_blank" href="https://www.ulisboa.pt/info/verao-na-ulisboa-2016">soldering workshops for younger students</a>, hackathons and <a target="_blank" href="https://tecnico.ulisboa.pt/en/events/secthon-security-hackathon/">CTFs</a>.</p>
+		</gig-description>
+	</gig>
+	</side-by-side-wrap>
+	</experience>
+</article>
 </body>
 </html>
