--- a/src/cv/index.html
+++ b/src/cv/index.html
@@ -38,7 +38,7 @@
       <a target="_blank" href="https://abra.pineman.eu">abra</a>, <a target="_blank" href="https://github.com/pineman/services">services</a>, <a target="_blank" href="https://github.com/pineman/code">playground</a>, <a target="_blank" href="https://gitlab.com/pineman/hello">ruby</a>, <a target="_blank" href="https://gitlab.com/pineman/homepage">this website</a>
 	</side-wrap>
 	<version>
-		<a target="_blank" href="https://www.pineman.eu/cv">HTML version</a> | <a target="_blank" href="https://www.pineman.eu/cv/cv.pdf">PDF version</a> | rev: e283ca4
+		<a target="_blank" href="https://www.pineman.eu/cv">HTML version</a> | <a target="_blank" href="https://www.pineman.eu/cv/cv.pdf">PDF version</a> | rev: 44e052f
 	</version>
 </aside>
 
@@ -73,7 +73,7 @@
 		</gig-header>
 		<gig-description>
 			<p>One Net is Celfocus' enterprise voice solution, with 5 international deployments. It unifies mobile phones, landlines, and softphones while providing many value-added features. The Call Handling Server (CHS) sits in the cell network, speaks both SS7 and SIP (185k C++ SLOC), has an in-memory DB and strict SLAs. Its provisioned via a web Portal, written in React and Java EE+PSQL, integrating with many external systems while providing its own JSON REST API.</p>
-			<p>I started as a CHS dev and then very gradually shifted to Portal backend, as I switched to a cross-functional team. I was fortunate enough to catch and learn from the project's founding Seniors, as my first professional endeavour, and acquired a sort-of generalist Systems role; currently, while I still do feature work, I mostly tend to infrastructure (CI), tooling, glue, dev productivity and work on the more off-the-beaten-path threads product-wide and architecturally. I spearheaded refactorings, infra migrations (Gitlab, GCloud) and a new project (docs with CI/CD).</p>
+			<p>I started as a CHS dev and then gradually shifted to Portal backend, as I switched to a cross-functional team. I was fortunate enough to learn from the project's founding Seniors, as my first professional endeavour, and emerged in a sort-of generalist Systems role; currently, while I still do feature work, I mostly tend to infrastructure (CI with many test types), tooling, glue, keeping everyone productive and handling the more off-the-beaten-path threads, product-wide and architecturally. I spearheaded many refactorings, conventions, infra migrations (Gitlab, GCloud) and a new project (docs with CI/CD).</p>
 		</gig-description>
 	</gig>
 	<hr />
@@ -81,7 +81,7 @@
 		<gig-header>
 			<gig-img><img src="assets/cms.png"></gig-img>
 			<gig-info>
-				<h4><i class="fas fa-briefcase"></i>Summer internship</h4>
+				<h4><i class="fas fa-briefcase"></i>Summer Internship</h4>
 				<h4><i class="fas fa-map-marker-alt fix"></i><a target="_blank" href="https://github.com/amagovpt/autenticacao.gov">Caixa Mágica - Portuguese Citizen Card</a></h4>
 				<h4><i class="fas fa-clock"></i>Jun. '19 to Aug. '19</h4>
 			</gig-info>
