--- a/cv/index.html
+++ b/cv/index.html
@@ -13,7 +13,7 @@
 <body>
 <aside>
 	<side-wrap>
-		<div id="photo"><img id="photo" src="assets/me.jpg" /></div>
+		<div id="photo"><img id="photo" src="../assets/me2.jpg" /></div>
 		<h2 id="name">João Pinheiro</h2>
 		<div id="description">Software • Systems • Curiosity</div>
 		<hr />
