--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="icon" type="image/x-icon" href="favicon.ico" />
-
 	<meta name="author" content="João Pinheiro" />
 	<meta name="description" content="Personal homepage of João Pinheiro" />
 	<meta name="keywords" content="homepage technology computer" />
@@ -18,11 +17,10 @@
 	<meta property="og:url" content="https://www.pineman.eu" />
 	<meta property="og:description" content="Personal homepage of João Pinheiro" />
 	<meta property="og:site_name" content="pineman.eu" />
-	<meta property="og:locale" content="en_US" />
+	<meta property="og:locale" content="en_UK" />
 	<title>João Pinheiro</title>
-
 	<link rel="stylesheet" href="style.css" />
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+	<link rel="stylesheet" href="assets/fontawesome/css/all.css">
 <!--
              ###        ##
            ##''+#  ##  #+'#
@@ -96,25 +94,19 @@
 	<h1>Hi! I'm João.</h1>
 	<span>Software • Systems • Curiosity</span>
 	<ul>
-	<li><i class="fa fa-envelope"></i><a href="mailto:joaocastropinheiro@gmail.com">joaocastropinheiro<wbr>@gmail.com</a></li>
-	<li><i class="fab fa-github"></i><a href="https://github.com/pineman" target="_blank">GitHub</a></li>
-	<li><i class="fab fa-linkedin"></i><a href="https://www.linkedin.com/in/joaocastropinheiro" target="_blank">LinkedIn</a></li>
-	<li><i class="fas fa-file-alt" style="padding-left:1px;"></i>CV: <a href="cv/cv.pdf" target="_blank">PDF</a> or <a href="cv" target="_blank">HTML</a></li>
-	<li><i class="fab fa-keybase"></i><a href="https://keybase.io/pineman" target="_blank">Keybase</a></li>
-	<li><i class="fas fa-key"></i><a href="assets/pubkey.asc" target="_blank">PGP key</a></li>
-	<!--<li><i class="fas fa-comments" style="font-size:0.9rem;padding:0 5px 0 -2px;"></i><code>pineman</code> on FreeNode and MozNet</li>-->
+	  <li><i class="fa fa-envelope"></i><a href="mailto:joaocastropinheiro@gmail.com">joaocastropinheiro<wbr>@gmail.com</a></li>
+	  <li><i class="fas fa-file-alt" style="padding-left:1px;"></i>CV: <a href="cv/cv.pdf" target="_blank">PDF</a> or <a href="cv" target="_blank">HTML</a></li>
+	  <li><i class="fab fa-linkedin"></i><a href="https://www.linkedin.com/in/joaocastropinheiro" target="_blank">LinkedIn</a></li>
+	  <li><i class="fab fa-github"></i><a href="https://github.com/pineman" target="_blank">GitHub</a></li>
+	  <li><i class="fas fa-key"></i><a href="assets/pubkey.asc" target="_blank">PGP key</a></li>
 	</ul>
 	</div>
 </header>
 <article>
-	<h1>About me</h1>
-	<p>My name is João Pinheiro (aka pineman) and I'm from Lisbon, Portugal. I'm a 4th year Electrical and Computer Engineering student at <a href="https://tecnico.ulisboa.pt/" target="_blank">Técnico Lisboa</a>. I'm passionate about software - especially large distributed systems and infrastructure. I love reading the manual - check out what I'm currently reading over at <a href="https://www.goodreads.com/review/list/30442257-jo-o-pinheiro?order=d&shelf=now-computer" target="_blank">my goodreads</a>.</p>
-	<p>Currently I'm most experienced with <b>C</b>, <b>Python</b>, <b>Java</b>, <b>JavaScript</b> (& <b>Node.js</b>) and <b>C++/Qt</b>. I love learning new languages and stacks: when I can, I dabble with Functional Programming and I'm very interested in <a href="https://www.youtube.com/watch?v=BXmOlCy0oBM" target="_blank">Erlang</a>/<a href="https://www.youtube.com/watch?v=JvBT4XBdoUE" target="_blank">Elixir</a>, Rust and Go.
-	<br />
-	<br />
-	<a href="https://www.eff.org/" style="border-bottom: none;"><img src="https://www.eff.org/files/eff-join2_0.png" alt="Join EFF!" border="0"></a>
-	<a href="https://www.fsf.org/" style="border-bottom: none;"><img src="https://static.fsf.org/nosvn/associate/crm/3217362.png" alt="Join the FSF!"></a>
-	<div id="test"></div>
+	<p>My name is João Pinheiro (aka pineman) and I'm from Lisbon, Portugal. I'm passionate about software - especially large distributed systems and infrastructure. I love reading the manual - check out what I'm currently reading over at <a href="https://www.goodreads.com/review/list/30442257-jo-o-pinheiro?order=d&shelf=now-computer" target="_blank">my goodreads</a>.</p>
+	<p>Currently I'm most experienced with <b>C</b>, <b>Python</b>, <b>Java</b>, <b>JavaScript</b> (& <b>Node.js</b>) and <b>C++/Qt</b>. I love learning new languages and stacks: when I can, I dabble with Functional Programming and I'm very interested in <a href="https://www.youtube.com/watch?v=BXmOlCy0oBM" target="_blank">Erlang</a>/<a href="https://www.youtube.com/watch?v=JvBT4XBdoUE" target="_blank">Elixir</a>, Rust and Go.</p>
+	<a href="https://www.eff.org/" class="img-link"><img src="https://www.eff.org/files/eff-join2_0.png" alt="Join EFF!" border="0"></a>
+	<a href="https://www.fsf.org/" class="img-link"><img src="https://static.fsf.org/nosvn/associate/crm/3217362.png" alt="Join the FSF!"></a>
 </article>
 </div>
 </body>
