pineman.eu has expired

--- a/cv/index.html
+++ b/cv/index.html
@@ -25,7 +25,7 @@
       <li><i class="fab fa-linkedin"></i><a target="_blank" href="https://www.linkedin.com/in/joaocastropinheiro">LinkedIn</a></li>
 			<li><i class="fab fa-github"></i><a target="_blank" href="https://github.com/pineman">GitHub</a></li>
 			<li><i class="fa-brands fa-goodreads"></i><a target="_blank" href="https://www.goodreads.com/review/list/30442257-jo-o-pinheiro?order=d&shelf=now-computer">Goodreads</a></li>
-			<li><i class="fas fa-globe"></i><a target="_blank" href="https://www.pineman.eu">www.pineman.eu</a></li>
+			<li><i class="fas fa-globe"></i><a target="_blank" href="https://pineman.github.io">Website</a></li>
 		</ul>
 		<hr />
 		<h3>Technologies</h3>
@@ -35,10 +35,10 @@
 			Go, Rust, Erlang/Elixir, Distributed Systems, Concurrency, High Availability, DevOps, OSes
 		<hr />
     <h3>Projects</h3>
-      <a target="_blank" href="https://abra.pineman.eu">abra</a>, <a target="_blank" href="https://github.com/pineman/services">services</a>, <a target="_blank" href="https://github.com/pineman/code">playground</a>, <a target="_blank" href="https://gitlab.com/pineman/hello">ruby</a>, <a target="_blank" href="https://gitlab.com/pineman/homepage">this website</a>
+      <a target="_blank" href="https://abra.fly.dev">abra</a>, <a target="_blank" href="https://github.com/pineman/services">services</a>, <a target="_blank" href="https://github.com/pineman/code">playground</a>, <a target="_blank" href="https://gitlab.com/pineman/hello">ruby</a>, <a target="_blank" href="https://gitlab.com/pineman/homepage">this website</a>
 	</side-wrap>
 	<version>
-		<a target="_blank" href="https://www.pineman.eu/cv">HTML version</a> | <a target="_blank" href="https://www.pineman.eu/cv/cv.pdf">PDF version</a> | rev: 44e052f
+		<a target="_blank" href="https://pineman.github.io/cv">HTML version</a> | <a target="_blank" href="https://pineman.github.io/cv/cv.pdf">PDF version</a> | rev: 44e052f
 	</version>
 </aside>
 
