--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 	<meta property="profile:last_name" content="Pinheiro" />
 	<meta property="profile:username" content="pineman" />
 	<meta property="profile:gender" content="male" />
-	<meta property="og:image" content="https://www.pineman.eu/assets/me2.jpg" />
-	<meta property="og:url" content="https://www.pineman.eu" />
+	<meta property="og:image" content="https://pineman.github.io/assets/me2.jpg" />
+	<meta property="og:url" content="https://pineman.github.io" />
 	<meta property="og:description" content="Personal homepage of João Pinheiro" />
-	<meta property="og:site_name" content="pineman.eu" />
+	<meta property="og:site_name" content="pineman.github.io" />
 	<meta property="og:locale" content="en_UK" />
 	<title>João Pinheiro</title>
 	<link rel="stylesheet" href="style.css" />
