--- a/cv/index.html
+++ b/cv/index.html
@@ -19,7 +19,7 @@
 		<hr />
 		<ul id="details">
 			<li><i class="fas fa-birthday-cake"></i>25</li>
-			<li><i class="fas fa-map-marker-alt"></i>Porto, Portugal</li>
+			<li><i class="fas fa-map-marker-alt"></i>Lisbon, Portugal</li>
 			<li><i class="fa fa-envelope"></i><a target="_blank" href="mailto:joaocastropinheiro@gmail.com">joaocastropinheiro@gmail.com</a></li>
 			<li><i class="fas fa-phone"></i><a target="_blank" href="tel:+351968818031">+351 968 818 031</a></li>
       <li><i class="fab fa-linkedin"></i><a target="_blank" href="https://www.linkedin.com/in/joaocastropinheiro">LinkedIn</a></li>
@@ -29,7 +29,7 @@
 		</ul>
 		<hr />
 		<h3>Technologies</h3>
-			Python, Java, C, C++, JavaScript, Bash, Git, PostgreSQL, Linux, Docker, K8s, GCloud, gitlab-runner
+			Python, Java, C, C++, JavaScript, Bash, Git, PostgreSQL, Linux, Docker, K8s, GCloud, Gitlab CI
 		<hr />
 		<h3>Interests</h3>
 			Go, Rust, Erlang/Elixir, Distributed Systems, Concurrency, High Availability, DevOps, OSes
@@ -38,7 +38,7 @@
       <a target="_blank" href="https://abra.fly.dev">abra</a>, <a target="_blank" href="https://github.com/pineman/services">services</a>, <a target="_blank" href="https://github.com/pineman/code">playground</a>, <a target="_blank" href="https://gitlab.com/pineman/hello">ruby</a>, <a target="_blank" href="https://gitlab.com/pineman/homepage">this website</a>
 	</side-wrap>
 	<version>
-		<a target="_blank" href="https://pineman.github.io/cv">HTML version</a> | <a target="_blank" href="https://pineman.github.io/cv/cv.pdf">PDF version</a> | rev: 44e052f
+		<a target="_blank" href="https://pineman.github.io/cv">HTML version</a> | <a target="_blank" href="https://pineman.github.io/cv/cv.pdf">PDF version</a> | rev: 2164f84
 	</version>
 </aside>
 
@@ -55,7 +55,7 @@
 		  </gig-info>
 		</gig-header>
 		<gig-description>
-			<p>BA, 4th-year Electrical and Computer Engineering.</p>
+			<p>Electrical and Computer Engineering.</p>
 		</gig-description>
 	</gig>
   </education>
@@ -72,8 +72,8 @@
 			</gig-info>
 		</gig-header>
 		<gig-description>
-			<p>One Net is Celfocus' enterprise voice solution, with 5 international deployments. It unifies mobile phones, landlines, and softphones while providing many value-added features. The Call Handling Server (CHS) sits in the cell network, speaks both SS7 and SIP (185k C++ SLOC), has an in-memory DB and strict SLAs. Its provisioned via a web Portal, written in React and Java EE+PSQL, integrating with many external systems while providing its own JSON REST API.</p>
-			<p>I started as a CHS dev and then gradually shifted to Portal backend, as I switched to a cross-functional team. I was fortunate enough to learn from the project's founding Seniors, as my first professional endeavour, and emerged in a sort-of generalist Systems role; currently, while I still do feature work, I mostly tend to infrastructure (CI with many test types), tooling, glue, keeping everyone productive and handling the more off-the-beaten-path threads, product-wide and architecturally. I spearheaded many refactorings, conventions, infra migrations (Gitlab, GCloud) and a new project (docs with CI/CD).</p>
+		  <p><b>Tech:</b> Java, JBoss, PostgreSQL, Bash, Docker, Gitlab CI, GCloud, K8s, Helm, Terraform, C++, JavaScript, React, Cypress, Asciidoc </p>
+			<p><a href='https://www.celfocus.com/home/index.php/offer/products/celfocus-one-net-mobile-office'>One Net</a> is Celfocus's enterprise voice solution, with 5 international deployments. The Call Handling Server (CHS) speaks both SS7 and SIP, in 185k SLOC of C++, has an in-memory DB and strict SLAs. It's provisioned via a web Portal, written in React and Java. It provides a JSON REST API and integrates with many external systems.</p><p>I started as a CHS dev and promptly shifted to Portal backend (rarely frontend), as I switched to a cross-functional agile team. I was fortunate enough to learn from the project's founding seniors, and emerged in a sort-of generalist Systems overview role. Currently, I do feature work and I'm also responsible for dev infra (CI w/ many test types), tooling and glue. Trying to keep everyone productive and handling the rarer issues architecturally.</p><p>I spearheaded refactorings, migrations with external teams, new features, updates, new conventions across 4 teams, CI/CD for a new project, failover in production, and even onboarding.</p>
 		</gig-description>
 	</gig>
 	<hr />
@@ -83,7 +83,7 @@
 			<gig-info>
 				<h4><i class="fas fa-briefcase"></i>Summer Internship</h4>
 				<h4><i class="fas fa-map-marker-alt fix"></i><a target="_blank" href="https://github.com/amagovpt/autenticacao.gov">Caixa Mágica - Portuguese Citizen Card</a></h4>
-				<h4><i class="fas fa-clock"></i>Jun. '19 to Aug. '19</h4>
+				<h4><i class="fas fa-clock"></i>Jun. '19 to Jul. '19</h4>
 			</gig-info>
 		</gig-header>
 		<gig-description>
@@ -102,7 +102,7 @@
 			</gig-info>
 		</gig-header>
 		<gig-description>
-			<p>Formula Student is an annual international student engineering competition. Teams build, test and race a formula style car. For a semester I programmed PIC μCs for automotive and a USB to CAN Interface (C++/Qt); Ported the latter to Windows; Reduced dev loop to one keypress.</p>
+			<p>In Formula Student teams build, test and race a formula style car. I programmed PIC μCs and reduced the dev loop to one keypress. Worked on a GUI app (C++/Qt) and ported it to windows. I dearly miss the passion and dedication of the team.</p>
 		<gig-description>
 	</gig>
 	<hr />
@@ -116,7 +116,7 @@
 			</gig-info>
 		</gig-header>
 		<gig-description>
-			<p>HackerSchool is a student society that promoted the Hacker spirit. I codeveloped a <a target="_blank" href="https://github.com/hackerschool/r2p">pair of GUI apps in C++/Qt</a> as a challenge by <a target="_blank" href="https://www.identity.pt/">Identity</a>; Codeveloped an <a target="_blank" href="https://github.com/hackerschool/ledmatrix">LED Matrix</a> in Python and Arduino; Supported events at IST, such as <a target="_blank" href="https://www.ulisboa.pt/info/verao-na-ulisboa-2016">soldering workshops for younger students</a>, hackathons and <a target="_blank" href="https://tecnico.ulisboa.pt/en/events/secthon-security-hackathon/">CTFs</a>.</p>
+			<p>HackerSchool is a student society that promoted the Hacker spirit. I codeveloped a <a target="_blank" href="https://github.com/hackerschool/r2p">pair of GUI apps in C++/Qt</a> as a challenge by <a target="_blank" href="https://www.identity.pt/">Identity</a>and an <a target="_blank" href="https://github.com/hackerschool/ledmatrix">LED Matrix</a> in Python and Arduino. I also organized events at IST: <a target="_blank" href="https://www.ulisboa.pt/info/verao-na-ulisboa-2016">soldering workshops for younger students</a>, hackathons and <a target="_blank" href="https://tecnico.ulisboa.pt/en/events/secthon-security-hackathon/">CTFs</a>.</p>
 		</gig-description>
 	</gig>
 	</side-by-side-wrap>
