Add concluding sentence

--- a/cv/index.html
+++ b/cv/index.html
@@ -32,13 +32,13 @@
 			Python, Java, C, C++, JavaScript, Bash, Git, PostgreSQL, Linux, Docker, K8s, GCloud, Gitlab CI
 		<hr />
 		<h3>Interests</h3>
-			Go, Rust, Erlang/Elixir, Distributed Systems, Concurrency, High Availability, DevOps, OSes
+			Go, Rust, Elixir. Distributed Systems, Concurrency, HA
 		<hr />
     <h3>Projects</h3>
       <a target="_blank" href="https://abra.fly.dev">abra</a>, <a target="_blank" href="https://github.com/pineman/services">services</a>, <a target="_blank" href="https://github.com/pineman/code">playground</a>, <a target="_blank" href="https://gitlab.com/pineman/hello">ruby</a>, <a target="_blank" href="https://gitlab.com/pineman/homepage">this website</a>
 	</side-wrap>
 	<version>
-		<a target="_blank" href="https://pineman.github.io/cv">HTML version</a> | <a target="_blank" href="https://pineman.github.io/cv/cv.pdf">PDF version</a> | rev: 2164f84
+		<a target="_blank" href="https://pineman.github.io/cv">HTML version</a> | <a target="_blank" href="https://pineman.github.io/cv/cv.pdf">PDF version</a> | rev: f41c940
 	</version>
 </aside>
 
@@ -73,7 +73,7 @@
 		</gig-header>
 		<gig-description>
 		  <p><b>Tech:</b> Java, JBoss, PostgreSQL, Bash, Docker, Gitlab CI, GCloud, K8s, Helm, Terraform, C++, JavaScript, React, Cypress, Asciidoc </p>
-			<p><a href='https://www.celfocus.com/home/index.php/offer/products/celfocus-one-net-mobile-office'>One Net</a> is Celfocus's enterprise voice solution, with 5 international deployments. The Call Handling Server (CHS) speaks both SS7 and SIP, in 185k SLOC of C++, has an in-memory DB and strict SLAs. It's provisioned via a web Portal, written in React and Java. It provides a JSON REST API and integrates with many external systems.</p><p>I started as a CHS dev and promptly shifted to Portal backend (rarely frontend), as I switched to a cross-functional agile team. I was fortunate enough to learn from the project's founding seniors, and emerged in a sort-of generalist Systems overview role. Currently, I do feature work and I'm also responsible for dev infra (CI w/ many test types), tooling and glue. Trying to keep everyone productive and handling the rarer issues architecturally.</p><p>I spearheaded refactorings, migrations with external teams, new features, updates, new conventions across 4 teams, CI/CD for a new project, failover in production, and even onboarding.</p>
+			<p><a href='https://www.celfocus.com/home/index.php/offer/products/celfocus-one-net-mobile-office'>One Net</a> is Celfocus's enterprise voice solution, with 5 international deployments. The Call Handling Server (CHS) speaks both SS7 and SIP, in 185k SLOC of C++, has an in-memory DB and strict SLAs. It's provisioned via a web Portal, written in React and Java. It provides a JSON REST API and integrates with many external systems.</p><p>I started as a CHS dev and promptly shifted to Portal backend (rarely frontend), as I switched to a cross-functional agile team. I was fortunate enough to learn from the project's founding seniors, and emerged in a sort-of generalist Systems overview role later.</p><p>Currently, I do backend feature work, while being the main dev responsible for dev infra (CI w/ many test types), tooling and glue. I try to keep everyone productive and handle the rarer architectural issues. I spearheaded refactorings, migrations with external teams, new features, updates, new conventions across 4 teams, CI/CD for a new project, failover in production, and even onboarding. But most of all, at Celfocus I learned responsiblity, commitment and TDD.</p>
 		</gig-description>
 	</gig>
 	<hr />
@@ -102,7 +102,7 @@
 			</gig-info>
 		</gig-header>
 		<gig-description>
-			<p>In Formula Student teams build, test and race a formula style car. I programmed PIC μCs and reduced the dev loop to one keypress. Worked on a GUI app (C++/Qt) and ported it to windows. I dearly miss the passion and dedication of the team.</p>
+			<p>In Formula Student teams build, test and race a formula style car. I programmed PIC μCs and reduced the dev loop to one keypress. Worked on a GUI (C++/Qt) &amp; ported it to windows. I dearly miss the passion and dedication of the team.</p>
 		<gig-description>
 	</gig>
 	<hr />
@@ -116,7 +116,7 @@
 			</gig-info>
 		</gig-header>
 		<gig-description>
-			<p>HackerSchool is a student society that promoted the Hacker spirit. I codeveloped a <a target="_blank" href="https://github.com/hackerschool/r2p">pair of GUI apps in C++/Qt</a> as a challenge by <a target="_blank" href="https://www.identity.pt/">Identity</a>and an <a target="_blank" href="https://github.com/hackerschool/ledmatrix">LED Matrix</a> in Python and Arduino. I also organized events at IST: <a target="_blank" href="https://www.ulisboa.pt/info/verao-na-ulisboa-2016">soldering workshops for younger students</a>, hackathons and <a target="_blank" href="https://tecnico.ulisboa.pt/en/events/secthon-security-hackathon/">CTFs</a>.</p>
+			<p>HackerSchool is a student society that promoted the Hacker spirit. I codeveloped a <a target="_blank" href="https://github.com/hackerschool/r2p">pair of GUI apps in C++/Qt</a> and an <a target="_blank" href="https://github.com/hackerschool/ledmatrix">LED Matrix</a> in Python and Arduino. I also organized events at IST: <a target="_blank" href="https://www.ulisboa.pt/info/verao-na-ulisboa-2016">a workshop for younger students</a>, hackathons and <a target="_blank" href="https://tecnico.ulisboa.pt/en/events/secthon-security-hackathon/">CTFs</a>.</p>
 		</gig-description>
 	</gig>
 	</side-by-side-wrap>
