--- a/cv/index.html
+++ b/cv/index.html
@@ -32,13 +32,13 @@
 			Python, Java, C, C++, JavaScript, Bash, Git, PostgreSQL, Linux, Docker, K8s, GCloud, Gitlab CI
 		<hr />
 		<h3>Interests</h3>
-			Go, Rust, Elixir. Distributed Systems, Concurrency, HA
+			Go, Kotlin, Rust, Elixir. Distributed Systems, Concurrency, HA
 		<hr />
     <h3>Projects</h3>
       <a target="_blank" href="https://abra.fly.dev">abra</a>, <a target="_blank" href="https://github.com/pineman/services">services</a>, <a target="_blank" href="https://github.com/pineman/code">playground</a>, <a target="_blank" href="https://gitlab.com/pineman/hello">ruby</a>, <a target="_blank" href="https://gitlab.com/pineman/homepage">this website</a>
 	</side-wrap>
 	<version>
-		<a target="_blank" href="https://pineman.github.io/cv">HTML version</a> | <a target="_blank" href="https://pineman.github.io/cv/cv.pdf">PDF version</a> | rev: f41c940
+		<a target="_blank" href="https://pineman.github.io/cv">HTML version</a> | <a target="_blank" href="https://pineman.github.io/cv/cv.pdf">PDF version</a> | rev: 34fc7f1
 	</version>
 </aside>
 
