Add commented date calc

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+  <!--<script src="moment.min.js" async></script>-->
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="icon" type="image/x-icon" href="favicon.ico" />
@@ -110,4 +111,7 @@
 </article>
 </div>
 </body>
+<!--<script>
+  document.getElementById('years').innerText = moment().diff(moment("2014-02-01"), 'years', true).toFixed(1);
+</script>-->
 </html>
