--- a/cv/index.html
+++ b/cv/index.html
@@ -35,10 +35,10 @@
 			Go, Kotlin, Rust, Elixir. Distributed Systems, Concurrency, HA
 		<hr />
     <h3>Projects</h3>
-      <a target="_blank" href="https://abra.fly.dev">abra</a>, <a target="_blank" href="https://github.com/pineman/code">playground</a>, <a target="_blank" href="https://gitlab.com/pineman/hello">ruby</a>, <a target="_blank" href="https://gitlab.com/pineman/homepage">this website</a>
+      <a target="_blank" href="https://abra.fly.dev">abra</a>, <a target="_blank" href="https://github.com/pineman/code">playground</a>, <a target="_blank" href="https://gitlab.com/pineman/homepage">this website</a>
 	</side-wrap>
 	<version>
-		<a target="_blank" href="https://pineman.github.io/cv">HTML version</a> | <a target="_blank" href="https://pineman.github.io/cv/cv.pdf">PDF version</a> | rev: 8a28847
+		<a target="_blank" href="https://pineman.github.io/cv">HTML version</a> | <a target="_blank" href="https://pineman.github.io/cv/cv.pdf">PDF version</a> | rev: ed2123f
 	</version>
 </aside>
 
