--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 	</div>
 </header>
 <article>
-	<p>My name is João Pinheiro (aka pineman) and I'm from Lisbon, Portugal. I'm passionate about software - especially large distributed systems and infrastructure. I made websites when I was 10 and started programming in 2014 with python. I love reading the manual - check out what I'm currently reading over at <a href="https://www.goodreads.com/review/list/30442257-jo-o-pinheiro?order=d&shelf=now-computer" target="_blank">my goodreads</a>.</p>
+	<p>My name is João Pinheiro (aka pineman) and I'm from Lisbon, Portugal. I'm passionate about software - especially large distributed systems and infrastructure. I made websites on neopets when I was 10 and started programming in 2014 with python. I love reading the manual - check out what I'm currently reading over at <a href="https://www.goodreads.com/review/list/30442257-jo-o-pinheiro?order=d&shelf=now-computer" target="_blank">my goodreads</a>.</p>
 	<p>Currently I'm most experienced with <b>C</b>, <b>Python</b>, <b>Java</b>, <b>JavaScript</b> (& <b>Node.js</b>) and <b>C++/Qt</b>. I'm keen on learning new languages and stacks: when I can, I dabble with Functional Programming and I'm very interested in <a href="https://www.youtube.com/watch?v=BXmOlCy0oBM" target="_blank">Erlang</a>/<a href="https://www.youtube.com/watch?v=JvBT4XBdoUE" target="_blank">Elixir</a>, Rust, Kotlin and Go.</p>
 	<a href="https://www.eff.org/" class="img-link"><img src="https://www.eff.org/files/eff-join2_0.png" alt="Join EFF!" border="0"></a>
 	<a href="https://www.fsf.org/" class="img-link"><img src="https://static.fsf.org/nosvn/associate/crm/3217362.png" alt="Join the FSF!"></a>
